--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
+    "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
     "firebase": "^7.14.3",
     "react": "^16.13.1",
@@ -26,6 +27,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "styled-components": "^5.1.1",
     "typescript": "^3.8.3"
   },
   "scripts": {
